--- a/styles/sass/index.scss
+++ b/styles/sass/index.scss
@@ -34,4 +34,6 @@
 @import './blocks/catalog';
 @import './blocks/pagination';
 @import './blocks/accordions';
+@import './blocks/about-service';
+@import './blocks//timeline';
 
