--- a/styles/sass/blocks/_ideas.scss
+++ b/styles/sass/blocks/_ideas.scss
@@ -63,15 +63,7 @@
 
   color: $middle-dark-color-default;
   a {
-    @extend %silly-link;
-    @extend %transition;
-
-    &:hover {
-      color: $middle-dark-color-hovered;
-    }
-    &:active {
-      color: $middle-dark-color-onclick;
-    }
+    @extend %gray-link ;
   }
 }
 
@@ -80,15 +72,7 @@
   margin-bottom: 4px;
   
   a {
-    @extend %silly-link;
-    @extend %transition;
-
-    &:hover {
-      color: $dark-color-hovered;
-    }
-    &:active {
-      color: $dark-color-onclick;
-    }
+    @extend %black-link;
   }
 }
 
