--- a/styles/sass/blocks/_map.scss
+++ b/styles/sass/blocks/_map.scss
@@ -15,5 +15,9 @@
     background-image: url(../../images/pic.png);
     background-size: cover;
     background-repeat: no-repeat;
+
+    @media screen and (max-width: $tablet ) {
+      height: 470px;
+    }
   }
 }
