--- a/styles/sass/utils/_samples.scss
+++ b/styles/sass/utils/_samples.scss
@@ -40,19 +40,19 @@
   }
 }
 
-%title-h3{
+%title-h3 {
   @extend %titles-circe-uppercase;
   font-size: 22px;
   line-height: 24px;
 }
 
-%title-h4{
+%title-h4 {
   @extend %titles-circe-uppercase;
   font-size: 16px;
   line-height: 24px;
 }
 
-%cover-title{
+%cover-title {
   @extend %titles-circe-uppercase;
   font-size: 52px;
   line-height: 68px;
@@ -131,6 +131,64 @@
   color: inherit;
   text-decoration: none;
 }
+
+%blue-link {
+  @extend %silly-link;
+  @extend %transition;
+
+  color: $primary-color-default;
+  &:hover {
+    color: $primary-color-hovered;
+  }
+  &:active {
+    color: $primary-color-onclick;
+  }
+
+  @media screen and (max-width: $tablet) {
+    &:hover {
+      color: $primary-color-default;
+    }
+  }
+}
+
+%black-link {
+  @extend %silly-link;
+  @extend %transition;
+
+  color: $dark-color-default;
+  &:hover {
+    color: $dark-color-hovered;
+  }
+  &:active {
+    color: $dark-color-onclick;
+  }
+
+  @media screen and (max-width: $tablet) {
+    &:hover {
+      color: $dark-color-default;
+    }
+  }
+}
+
+%gray-link {
+  @extend %silly-link;
+  @extend %transition;
+
+  color: $middle-dark-color-default;
+  &:hover {
+    color: $middle-dark-color-hovered;
+  }
+  &:active {
+    color: $middle-dark-color-onclick;
+  }
+
+  @media screen and (max-width: $tablet) {
+    &:hover {
+      color: $middle-dark-color-default;
+    }
+  }
+}
+
 
 /*----------------------------------- transition -----------------------------------*/
 %transition {
