feat: страницы авторизации, смены пароля, профиля, модерации идей

--- a/styles/sass/index.scss
+++ b/styles/sass/index.scss
@@ -37,4 +37,7 @@
 @import './blocks/about-service';
 @import './blocks//timeline';
 @import './blocks/auth';
+@import './blocks/profile';
+@import './blocks/tabs';
+@import './blocks/moderation';
 
