--- a/styles/sass/utils/_variables.scss
+++ b/styles/sass/utils/_variables.scss
@@ -11,7 +11,7 @@ $secondary-color-hovered: #CADF00;
 $secondary-color-onclick: #BED200;
 
 /*dark/black*/
-$dark-color-default: #201E33;
+$dark-color-default: #25253B;
 $dark-color-hovered: #605D7C;
 $dark-color-onclick: #201E33;
 
