--- a/styles/sass/blocks/_auth.scss
+++ b/styles/sass/blocks/_auth.scss
@@ -8,6 +8,13 @@
   @media screen and (max-width: $tablet) {
     margin: 60px auto 60px;
   }
+
+  .auth__field {
+    border: none;
+    outline: none;
+    margin: 0;
+    padding: 0;
+  }
 }
 
 
@@ -31,11 +38,17 @@
     }
   }
 
-  &:last-of-type {
+  &.auth__input-group_line {
     flex-direction: row;
     justify-content: space-between;
-    margin-bottom: 40px;
+
+    @media screen and (max-width: $tablet) {
+      flex-direction: column;
+      row-gap: 12px;
+      
+    }
   }
+
 }
 
 .auth__helplink {
@@ -53,14 +66,13 @@
   pointer-events: none;
 	left: 5px;
 	top: 10px;
-  width: 226px;
+  width: 276px;
 
   &.form__label_active {
     top: -10px;
     font-size: 12px;
   } 
 }
-
 
 
 
@@ -176,8 +188,6 @@
 
 }
 
-
-
 .auth__check-description {
   @extend %text-circe-18;
   color: $dark-color-default;
@@ -233,7 +243,7 @@
   @extend %button;
   max-width: 244px;
   width: 100%;
-  margin: 0 auto;
+  margin: 40px auto 0;
   background-color: $primary-color-default;
   color: $light-color-default;
 
@@ -252,10 +262,11 @@
 /***************************************** СООБЩЕНИЕ ОБ ОТПРАВКЕ *****************************************/
 .auth__message {
   @extend %text-circe-18;
-  margin: 40px auto 0;
+  margin: 40px auto ;
   width: 100%;
+  text-align: center;
 
-  color: $active-text-color;
+  color: $dark-color-default;
   box-sizing: border-box;
   padding: 0;
 
@@ -275,11 +286,6 @@
 
 
 @media screen and (max-width: 960px) {
-
-  .auth__check-description  {
-    font-size: 14px;
-    line-height: 20px;
-  }
 
 	.auth__check {
 		margin: 2px 0 0;
